# Calculator-QML_Qt

./: CMakeLists.txt  Main.qml  README.md  main.cpp
Backend/Include/: CalculatorBackend.h  CommonDefines.h  DatabaseManager.h
Backend/Source/: CalculatorBackend.cpp  DatabaseManager.cpp
Frontend/: CalculatorButton.qml  DisplayScreen.qml  Keypad.qml  SidePanel.qml
